# tauri-pitch

./: .gitignore  README.md  cspell.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: on-pull-request.yml
pitch-detection-wasm/: Cargo.toml
pitch-detection-wasm/pkg/: package.json
pitch-detection-wasm/src/: lib.rs  log.rs
src/: App.css  App.tsx  main.tsx  socket.tsx  utils.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  fetch_youtube.rs  get_server_address.rs  lib.rs  localhost_server.rs  main.rs  yrs_server.rs
src/components/: karaoke.tsx  nav-tabs.tsx  settings.tsx
src/components/circle-chart/: circle-chat.tsx  style.css
src/state/: store.ts
src/state/redux-slices/core/: slice.ts  thunks.ts
src/state/redux-slices/karaoke/: index.ts  slice.ts  thunks.ts
src/worker/: index.ts
