[package]
name = "tauri-pitch"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_pitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16.0"
hound = "3.5.1"
async-std = "1.13.1"
tauri-plugin-localhost = "2"
http = "1.3.1"
tiny_http = "0.12.0"
warp = "0.3.7"
yrs-warp = "0.9.0"
yrs = "0.24.0"
tokio = "1.47.1"
futures-util = "0.3.31"
port-selector = "0.1.6"
local-ip-address = "0.6.5"
yt-dlp = "1.3.4"

[features]
jack = []

